-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.4, 5.10.1
-
Ubuntu 16.04 with latest updates.
CentOS 7.4.1708
Also tested on Fedora 27 and OpenSUSE 42.3
-
488b8e8ed01018c155812e5cfb06162a5e216c7a e5866624a201b48c16a043fe876f7da08dae90ee
Hi,
After update from 5.9.2 to 5.9.4 for Linux build, I found an issue.
Note: I use official precompiled release binaries.
After deploying my application showed weird artifacts in HTML content shown with QWebEngineView.
After some investigation, I found only this:
It qt.conf after deploying qt libs has Prefix with relative path Qt WebEngine renders HTML incorrectly.
I even tried to copy all qt libs and dependencies to make sure there is no missed libs or plugins - didn't help.
I've attached test project 'browser-test' that illustrate the issue with absolute minimum amount of code:
#include <QApplication>
#include <QWebEngineView>
QUrl commandLineUrlArgument()
{
const QStringList args = QCoreApplication::arguments();
for (const QString &arg : args.mid(1)) {
if (!arg.startsWith(QLatin1Char('-')))
return QUrl::fromUserInput(arg);
}
return QUrl(QStringLiteral("https://accounts.autodesk.com"));
}
int main(int argc, char *argv[])
{
QCoreApplication::setAttribute(Qt::AA_EnableHighDpiScaling);
QApplication app(argc, argv);
QWebEngineView view;
view.setUrl(commandLineUrlArgument());
view.resize(1024, 750);
view.show();
return app.exec();
}
test.html:
<!DOCTYPE html>
<html>
<head>
<meta charset="UTF-8">
<title>Title of the document</title>
</head>
<body>
Content of the document......
<p>Text next line!</p>
</body>
Check attached screenshots for actual results of running:
./browser-test $(pwd)/test.html
with relative Prefix path in qt.conf - incorrect-html-rendering.png
with absolute Prefix path in qt.conf - correct-html-rendering.png
Windows and MacOS builds are working fine.
- is duplicated by
-
QTBUG-67489 Standalone QWebEngine application shows corrupted pages and HTML source code (Ubuntu + 5.9.4 only)
-
- Closed
-
-
QTBUG-67023 Linux: WebEngine is not deployable
-
- Closed
-
| For Gerrit Dashboard: QTBUG-66346 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 220734,7 | Separate argv for QCoreApplication and Chromium in WebEngineProcess | 5.11 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 221106,2 | Separate argv for QCoreApplication and Chromium in WebEngineProcess | 5.9 | qt/qtwebengine | Status: MERGED | +2 | 0 |