Separate argv for QCoreApplication and Chromium in WebEngineProcess

On Linux, Chromium manipulates argv, merging all command line
arguments into argv[0] and deleting the other arguments - see
set_process_title_linux.cc for the glory details. This potentially
confuses QCoreApplication::applicationDirPath(), which assumes
that argv[0] contains the binary path. This in turn caused a
regression in Qt 5.9.4 where resource files could not be located
anymore for QtWebEngineProcess.

Avoid this by making two distinct copies of argv already in main().

Task-number: QTBUG-66346
Change-Id: I24d103bb15e77db69faae3bcfc736df25e4ec5d3
Reviewed-by: Michal Klocek <michal.klocek@qt.io>